add customer requirment

--- a/TastyBiteapp/templates/html/Customer.html
+++ b/TastyBiteapp/templates/html/Customer.html
@@ -24,7 +24,7 @@
                 <td>{{ r.cuisine }}</td>
                 <td>{{ r.rating }}</td>
                 <td>
-                    <a href="{% url 'showmenu' r.id  %}">
+                    <a href="{% url 'showmenucustomer' r.id  %}">
                         <button type="button">showmenu Menu</button>
                     </a>
                 </td>
