--- a/TastyBiteapp/templates/html/Customer.html
+++ b/TastyBiteapp/templates/html/Customer.html
@@ -6,9 +6,10 @@
     <title>Restaurant List</title>
 </head>
 <body>
-    <h1>{{username.name}}</h1>
     <h1>Restaurant</h1>
+    {{username}}
     <table border="1">
+        <a href="{% url 'show_cart_page' username %}">cart</a>
         <thead>
             <th>Picture</th>
             <th>Name</th>
@@ -24,7 +25,7 @@
                 <td>{{ r.cuisine }}</td>
                 <td>{{ r.rating }}</td>
                 <td>
-                    <a href="{% url 'showmenucustomer' r.id  %}">
+                   <a href="{% url 'showmenucustomer' r.id username %}">
                         <button type="button">showmenu Menu</button>
                     </a>
                 </td>
