--- a/TastyBiteapp/templates/html/showmenucustomer.html
+++ b/TastyBiteapp/templates/html/showmenucustomer.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <h1>{{restaurant.name}}</h1>
-
+{{username}}
    <table border="1">
     <thead>
         <th>name
@@ -43,10 +43,10 @@ Description
                 <img src="{{i.picture}}" alt="no img is found">
             </td>
             <td>
-                <a href="{% url 'openupadetitem' i.id %}">Update</a>
-                <form method="post" action="{% url 'deleteitem' i.id %}">
-                      {% csrf_token %}
-              <button>deleteitem</button> </form>
+               <form method="POST" action="{% url 'add_to_cart' i.id username %}">
+                        {% csrf_token %}
+                        <button type="submit" onclick="return confirm('Are you sure you want to add to cart?')">Add to cart</button>
+                    </form>
             </td>
         </tr>
         {% endfor %}
